--- a/Mango.Web/Views/Product/ProductIndex.cshtml
+++ b/Mango.Web/Views/Product/ProductIndex.cshtml
@@ -8,7 +8,7 @@
         </div>
 
         <div class="col text-end pt-1">
-            <a asp-action="Create" class="btn btn-outline-info"><i class="fas fa-plus"></i> Create New Product</a>
+            <a asp-action="ProductCreate" class="btn btn-outline-info"><i class="fas fa-plus"></i> Create New Product</a>
         </div>
     </div>
     <table class="table">
