42. it is not working. Update product.

--- a/Mango.Web/Views/Product/ProductEdit.cshtml
+++ b/Mango.Web/Views/Product/ProductEdit.cshtml
@@ -5,7 +5,7 @@
     <input asp-for="ProductId" hidden />
     <br />
     <div class="container border p-3">
-        <h1 class="text-info">Create Product</h1>
+        <h1 class="text-info">Edit Product</h1>
 
         <hr />
         <div class="row">
