--- a/Mango.Web/Views/Product/ProductDelete.cshtml
+++ b/Mango.Web/Views/Product/ProductDelete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Mango.Web.Models.ProductDto
 
-
 <form asp-action="ProductDelete">
+    <input asp-for="ProductId" hidden />
     <br />
     <div class="container border p-3">
         <h1 class="text-info">Delete Product</h1>
@@ -38,19 +38,14 @@
             <div class="col-10 pb-3">
                 <input asp-for="Price" disabled class="form-control" />
             </div>
-
-            <div>
-                <h3 class="text-info">Are you sure you wish to delete it?</h3>
-                <div class="col-5 offset-2">
-                    <a asp-action="ProductIndex" class="btn-primary btn form-control ">No. Go Back to the List</a>
-                </div>
-                <div class="col-5">
-                    <input type="submit" value="Yes, DELETE" class="btn btn-danger form-control" />
-                </div>
+            <div class="col-5 offset-2">
+                <a asp-action="ProductIndex" class="btn-success btn form-control ">Back to List</a>
             </div>
-            
-        </div>
-        <div>
+            <div class="col-5">
+                <input type="submit" value="DELETE!" class="btn btn-danger form-control" />
+
+            </div>
+
         </div>
     </div>
 </form>
