Addon. Product Details.

--- a/Mango.Web/Views/Product/ProductDetails.cshtml
+++ b/Mango.Web/Views/Product/ProductDetails.cshtml
@@ -1,11 +1,10 @@
 ﻿@model Mango.Web.Models.ProductDto
 
-<form asp-action="ProductDelete">
+<form asp-action="ProductDetails">
     <input asp-for="ProductId" hidden />
     <br />
     <div class="container border p-3">
-        <h1 class="text-info">¿Are you sure you want to delete this product?</h1>
-        <h3>This action cannot be undone.</h3>
+        <h1 class="text-info">Product</h1>
 
         <hr />
         <div class="row">
@@ -42,11 +41,6 @@
             <div class="col-5 offset-2">
                 <a asp-action="ProductIndex" class="btn-success btn form-control ">Back to List</a>
             </div>
-            <div class="col-5">
-                <input type="submit" value="DELETE!" class="btn btn-danger form-control" />
-
-            </div>
-
         </div>
     </div>
 </form>
