--- a/Mango.Web/Views/Product/ProductIndex.cshtml
+++ b/Mango.Web/Views/Product/ProductIndex.cshtml
@@ -29,7 +29,7 @@
                     <td>@item.Price.ToString("c")</td>
                     
                     <td>
-                        <a asp-action="DetailsProduct" class="btn btn-primary" asp-route-productId="@item.ProductId"><i class="fas fa-th-list"></i> Details </a>
+                        <a asp-action="ProductDetails" class="btn btn-primary" asp-route-productId="@item.ProductId"><i class="fas fa-th-list"></i> Details </a>
                         <a asp-action="ProductEdit" class="btn btn-warning" asp-route-productId="@item.ProductId"><i class="fas fa-edit"></i> Edit</a>
                         <a asp-action="ProductDelete" class="btn btn-danger" asp-route-productId="@item.ProductId"><i class="fas fa-trash"></i> Delete</a>
                     </td>
